# a2a-itk

./: .dockerignore  .gitignore  Dockerfile  README.md  itk_service.py  pyproject.toml  run_tests.py  scenarios.yaml  testlib.py
.github/workflows/: ci.yml  deploy_dashboard.yml
agents/go/v03/: main.go
agents/go/v10/: go.mod  go.sum  main.go
agents/java/v10/: pom.xml
agents/java/v10/src/main/java/org/a2aproject/sdk/examples/helloworld/: AdditionalRoutes.java  AgentCardProducer.java  AgentExecutorProducer.java
agents/java/v10/src/main/resources/: application.properties
agents/python/v03/: main.py
agents/python/v10/: main.py  pyproject.toml
agents/rust/v10/: Cargo.toml  build.rs
agents/rust/v10/src/: main.rs
agents/ts/v03/: build_protos.sh  main.ts  package-lock.json  package.json
agents/ts/v03/pb/: instruction.ts
agents/ts/v10/: build_protos.sh  main.ts  package-lock.json  package.json  tsconfig.json
dashboard/: app.js  index.html  style.css
scripts/: compare_results.py  process_results.py
test_suite/: __init__.py  current.py  java_v10.py  rust_v10.py  ts_v03.py  ts_v10.py
tests/: test_compare_results.py
