[package]
name = "itk-rust-v10-agent"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.85.0"

[[bin]]
name = "itk-rust-v10-agent"
path = "src/main.rs"

[dependencies]
a2a        = { package = "a2a-lf",        version = "0.3.0" }
a2a-server = { package = "a2a-server-lf", version = "0.4.0" }
a2a-client = { package = "a2a-client-lf", version = "0.2.0", default-features = false }
a2a-grpc   = { package = "a2a-grpc",      version = "0.3.0", default-features = false }
a2a-pb     = { package = "a2a-pb",        version = "0.1.8" }

async-trait  = "0.1"
async-stream = "0.3"
axum         = "0.8"
futures      = "0.3"
prost        = "0.13"
serde_json   = "1"
tokio        = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic        = "0.14"
tower-http   = { version = "0.6", features = ["normalize-path"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64       = "0.22"

[build-dependencies]
prost-build = "0.13"
